<resources>
    <string name="app_name">Github Client</string>


    <string name="search_hint">Input username here …</string>
    <string name="user_detail_title">Profile</string>
    <string name="user_detail_bio_label">Bio</string>
    <string name="user_detail_location_label">Living in</string>
    <string name="user_detail_company_label">Working at</string>
    <string name="user_detail_follower_label">Followers</string>
    <string name="user_detail_following_label">Following</string>
    <string name="empty_users_msg">Cannot find any matching users</string>
    <string name="exception_title">Something happened</string>
    <string name="exception_general_msg">An error has occurred, please try again later.</string>
    <string name="exception_retry_btn_label">Retry</string>
    <string name="exception_cancel_btn_label">Cancel</string>
</resources>