<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hungnpk.github.clients.presentation.userdetail.GithubUserDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".presentation.userdetail.GithubUserDetailFragment">

        <View
            android:id="@+id/bgUserDetail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/ocean_magic_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/user_detail_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_large"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/tvProfileTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvProfileTitle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivUserAvatar"
            android:layout_width="@dimen/avatar_full_size"
            android:layout_height="@dimen/avatar_full_size"
            app:layout_constraintBottom_toBottomOf="@id/bgUserDetail"
            app:layout_constraintEnd_toEndOf="@id/bgUserDetail"
            app:layout_constraintStart_toStartOf="@id/bgUserDetail"
            app:layout_constraintTop_toTopOf="@id/bgUserDetail"
            app:layout_constraintVertical_bias="0.4"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvUserFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@{viewModel.userLiveData.name}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xxlarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivUserAvatar"
            tools:text="Hung Nguyen" />

        <TextView
            android:id="@+id/tvFollowerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:text="@string/user_detail_follower_label"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvFollowingLabel"
            app:layout_constraintStart_toStartOf="@id/bgUserDetail"
            app:layout_constraintTop_toBottomOf="@id/tvUserFullName" />

        <TextView
            android:id="@+id/tvFollowerNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:text="@{viewModel.userLiveData.followers.toString()}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="@id/tvFollowerLabel"
            app:layout_constraintStart_toStartOf="@id/tvFollowerLabel"
            app:layout_constraintTop_toBottomOf="@id/tvFollowerLabel"
            tools:text="6" />

        <TextView
            android:id="@+id/tvFollowingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_detail_following_label"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tvFollowerLabel"
            app:layout_constraintEnd_toEndOf="@id/bgUserDetail"
            app:layout_constraintStart_toEndOf="@id/tvFollowerLabel" />

        <TextView
            android:id="@+id/tvFollowingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:text="@{viewModel.userLiveData.following.toString()}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="@id/tvFollowingLabel"
            app:layout_constraintStart_toStartOf="@id/tvFollowingLabel"
            app:layout_constraintTop_toBottomOf="@id/tvFollowingLabel"
            tools:text="16" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            app:cardCornerRadius="@dimen/corner_default"
            app:contentPadding="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bgUserDetail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvBioLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_detail_bio_label"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvBiography"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.userLiveData.biography}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBioLabel"
                    tools:text="I am an Android Developer" />

                <TextView
                    android:id="@+id/tvLocationLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_default"
                    android:text="@string/user_detail_location_label"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tvCompanyLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBiography" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.userLiveData.location}"
                    app:layout_constraintEnd_toEndOf="@id/tvLocationLabel"
                    app:layout_constraintStart_toStartOf="@id/tvLocationLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvLocationLabel"
                    tools:text="London" />

                <TextView
                    android:id="@+id/tvCompanyLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_detail_company_label"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@id/tvLocationLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvLocationLabel" />

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.userLiveData.company}"
                    app:layout_constraintEnd_toEndOf="@id/tvCompanyLabel"
                    app:layout_constraintStart_toStartOf="@id/tvCompanyLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvCompanyLabel"
                    tools:text="Facebook" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/ivProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"
            android:elevation="@dimen/elevation_default"
            app:visible="@{viewModel.loading}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>